# Neural

./: .gitignore  CMakeLists.txt  Conv2D.cpp  Makefile  README.md  convneural.cpp  convneural.h  cudatest.nn  image.cpp  image.h  linalg_cpu.cpp  main.cpp  neural.cpp  neural.cu  neural.h  test10e10k0p015.nn  test10e10k0p025.nn  test10e10k0p1.nn  test10e60k0p25.nn
cudalinear/: cudalinear.cu  cudalinear.h  linalg.cpp  linalg.h
pretrained/: model10e60k0p28.nn  model20e60k0p28.nn  model5e60k0p28.nn
src/: CMakeLists.txt  image.cpp  image.h  main.cpp  neural.cpp  neural.h
src/cudalinear/: CMakeLists.txt  cudalinear.cu  cudalinear.h  cudalinear_old.cu  linalg.cpp  linalg.h
src/experimental/: Conv2D.h  cudalinear_old.cu  cudalinear_old.h  linalg_cpu.h
src/linalg/: cudalinear.cu  cudalinear.h  linalg.cpp  linalg.h
